會發生異常嗎？

--- a/pound/error_page/error_example.html
+++ b/pound/error_page/error_example.html
@@ -3,8 +3,8 @@
     <head>
         <title>系統發生錯誤</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link href="http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/css/reset.css" rel="stylesheet" type="text/css">	
-	<link href="http://raw.github.com/pulipulichen/zentyal-dlll/master/pound/error_page/css/styles.css" rel="stylesheet" type="text/css">
+        <link href="https://dl.dropboxusercontent.com/u/717137/20130914-error_page/css/reset.css" rel="stylesheet" type="text/css">	
+	<link href="https://dl.dropboxusercontent.com/u/717137/20130914-error_page/css/styles.css" rel="stylesheet" type="text/css">
 	<!--[if LTE IE 8]>
 		<link href="css/ie.css" rel="stylesheet" type="text/css">
 	<![endif]-->
